--- a/public/css/src/home/index.styl
+++ b/public/css/src/home/index.styl
@@ -21,6 +21,7 @@
 		padding 5px
 		margin-left -200px
 		width 400px
+		z-index 999999
 
 		a
 			display block
